# flower

examples/advanced_pytorch/: client.py
examples/fedmd/: client.py  fedmd.ipynb  server.py  utils.py
examples/multiframework_example/: client_pytorch.py  client_tensorflow.py  pyproject.toml  utils.py
examples/sklearn-nn/: nn-try.py  nn_client.py  nn_server.py  nn_utils.py  run.sh  simple-fl.py
